[gd_scene load_steps=3 format=3 uid="uid://2xjxs7aqgbhg"]

[ext_resource type="Script" uid="uid://dw03j71q3ukdk" path="res://systems/3D_rotation_screen/window_to_3d.gd" id="1_3rf8d"]

[sub_resource type="BoxMesh" id="BoxMesh_gci3o"]

[node name="WindowTo3D" type="SubViewportContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -896.0
offset_bottom = -392.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3rf8d")

[node name="SubViewport" type="SubViewport" parent="."]
transparent_bg = true
handle_input_locally = false
render_target_update_mode = 4

[node name="World" type="Node3D" parent="SubViewport"]

[node name="ObjectHolder" type="Marker3D" parent="SubViewport/World"]

[node name="PlaceHolder" type="MeshInstance3D" parent="SubViewport/World/ObjectHolder"]
mesh = SubResource("BoxMesh_gci3o")

[node name="CameraHolder" type="Node3D" parent="SubViewport/World"]

[node name="Camera3D" type="Camera3D" parent="SubViewport/World/CameraHolder"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 3)
current = true
fov = 40.0

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
